@@ -1,3 +1,7 @@
+2022-05-26  Matteo Corti  <matteo@corti.li>
+
+        * check_ssl_cert (main): added default ports for XMPP
+
 2022-05-25  Matteo Corti  <matteo@corti.li>
 
         * check_ssl_cert (parse_command_line_options): Support for DTLS
